updated contact me emoji and added margin to about me paragraphs

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
       </p>
     </span>
     <br />
-    <h2 id="contact-me-address">Contact me 📞</h2>
+    <h2 id="contact-me-address">Contact me 📫</h2>
     <a href="mailto:sammyjowymerpsych@gmail.com">sammyjowymerpsych@gmail.com</a>
   </body>
 </html>
