--- a/about.html
+++ b/about.html
@@ -5,38 +5,98 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <title>SheCodes About</title>
   </head>
   <body>
-    <a class="homepage-link" href="index.html">Homepage</a>
-    <h1>About me</h1>
-    <span class="about-me-description">
-      <p class="about-1">
-        What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing
-        and typesetting industry. Lorem Ipsum has been the industry's standard
-        dummy text ever since the 1500s, when an unknown printer took a galley
-        of type and scrambled it to make a type specimen book. It has survived
-        not only five centuries, but also the leap into electronic typesetting,
-        remaining essentially unchanged. It was popularised in the 1960s with
-        the release of Letraset sheets containing Lorem Ipsum passages, and more
-        recently with desktop publishing software like Aldus PageMaker including
-        versions of Lorem Ipsum.
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Sammy Wymer</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html#contact-me-address"
+                >Contact me</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+      <h1 class="text-center mt-5 pt-3">About me</h1>
+      <h3 class="text-center text-muted">
+        Frond-end developer from County Durham, UK
+      </h3>
+      <div class="about-paragraph m-4 p-4">
+        <p class="text-center text-start ps-5 pe-5">
+          What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing
+          and typesetting industry. What is Lorem Ipsum? Lorem Ipsum is simply
+          dummy text of the printing and typesetting industry.
+        </p>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <img
+              class="img-fluid p-2 shadow rounded"
+              src="images/weather-app-image.PNG"
+            />
+          </div>
+           <div class="col-sm-4">
+            <img
+              class="img-fluid p-2 shadow rounded"
+              src="images/jason-bateman-image.PNG"
+              height=100
+            />
+          </div>
+          <div class="col-sm-4">
+            <img
+              class="img-fluid p-2 pt-4 pb-4 mt-2 shadow rounded"
+              src="images/seaglass-image.PNG"
+
+            />
+          </div>
+
+        </div>
+      </div>
+      <br />
+      <h2 class="text-center pt-5" id="contact-me-address">Contact me 📫</h2>
+      <p class="text-center">
+        <a
+          href="mailto:sammyjowymerpsych@gmail.com"
+          class="email text-decoration-none"
+          >sammyjowymerpsych@gmail.com</a
+        >
       </p>
-      <p class="about-2">
-        What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing
-        and typesetting industry. Lorem Ipsum has been the industry's standard
-        dummy text ever since the 1500s, when an unknown printer took a galley
-        of type and scrambled it to make a type specimen book. It has survived
-        not only five centuries, but also the leap into electronic typesetting,
-        remaining essentially unchanged. It was popularised in the 1960s with
-        the release of Letraset sheets containing Lorem Ipsum passages, and more
-        recently with desktop publishing software like Aldus PageMaker including
-        versions of Lorem Ipsum.
-      </p>
-    </span>
-    <br />
-    <h2 id="contact-me-address">Contact me 📫</h2>
-    <a href="mailto:sammyjowymerpsych@gmail.com">sammyjowymerpsych@gmail.com</a>
+    </div>
   </body>
 </html>
