Changed h1 font size

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     </nav>
       <h1 class="text-center mt-5 pt-3">About me</h1>
       <h3 class="text-center text-muted">
-        Frond-end developer from County Durham, UK
+        Front-end developer from County Durham, UK
       </h3>
       <div class="about-paragraph m-4 p-4">
         <p class="text-center text-start ps-5 pe-5">
