--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <br />
       <br />
       <h3 class="text-center">👋 Hi I am</h3>
-      <h1 class="text-center fw-bold">Sammy Wymer</h1>
+      <h1 class="text-center fw-bold pb-2">Sammy Wymer</h1>
       <p class="text-center text-muted">
         👩‍💻Front-end developer, based in Europe
       </p>
