--- a/about.html
+++ b/about.html
@@ -58,9 +58,7 @@
       </h3>
       <div class="about-paragraph m-4 p-4">
         <p class="text-center text-start ps-5 pe-5">
-          What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing
-          and typesetting industry. What is Lorem Ipsum? Lorem Ipsum is simply
-          dummy text of the printing and typesetting industry.
+         "I'm a loser, loosen up"
         </p>
       </div>
       <div class="container">
