--- a/index.html
+++ b/index.html
@@ -131,14 +131,16 @@
           </div>
           <br />
           <div class="col-6">
-            <h4 class="text-start mb-3">Jason Bateman</h4>
-            <p class="text-start">
+            <h4 class="text-start mb-3 ms-2">Jason Bateman</h4>
+            <p class="text-start ms-2">
               What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the
               printing and typesetting industry. What is Lorem Ipsum? Lorem
               Ipsum is simply dummy text of the printing and typesetting
               industry.
             </p>
-            <button id="bateman-button">Learn about Jason Bateman</button>
+            <button class="ms-2" id="bateman-button">
+              Learn about Jason Bateman
+            </button>
           </div>
         </div>
       </div>
